k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stats-server
  namespace: stats-server
spec:
  selector:
    app: stats-server
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
